fixed sizing issue for text on mobile

--- a/myapp/public/stylesheets/blockList.css
+++ b/myapp/public/stylesheets/blockList.css
@@ -16,8 +16,7 @@ HTML Format:
             </div>
         </div>
     </li>
-</ul>    
-
+</ul>
 
 */
 
@@ -68,7 +67,7 @@ HTML Format:
 @media screen and (max-width: 1200px) {
     .blockList li { 
         width: 28%; 
-        font-size: 3vw;
+        font-size: 2vw;
     } 
     
     .activitiesList li{
